Updated generate_response method to accept kwargs

--- a/tasks/examples/llm_node_tool_simulation/graph_config.yaml
+++ b/tasks/examples/llm_node_tool_simulation/graph_config.yaml
@@ -10,8 +10,8 @@ graph_config:
       node_type: llm
       post_process: tasks.examples.llm_node_tool_simulation.task_executor.MathAgentPostProcessor
       output_keys:
+        - response
         - tool_calls
-        - math_result
       tools:
           - tasks.examples.agent_tool_simulation.tools.add
           - tasks.examples.agent_tool_simulation.tools_from_class.ToolClass
@@ -41,8 +41,8 @@ output_config:
       from: "id"
     "user_query":
       from: "user_query"
-    "math_result":
-      from: "math_result"
+    "response":
+      from: "response"
     "tool_calls":
       from: "tool_calls"
 
