feat: Add comprehensive metadata tracking system with latency statistics and cost tracking
- Implemented MetadataCollector singleton for centralized metrics collection
- Added automatic tracking via @track_model_request decorator
- Integrated LangChain callback for agent/tool tracking
- Added comprehensive test suite (94 tests, 100% passing)

Features:
- Multi-level tracking: aggregate, per-model, and per-node metrics
- Token statistics: prompt, completion, total tokens with averages
- Performance metrics: latency (total, average, percentiles), throughput, failure rates
- Latency statistics: min, max, mean, median, std_dev, p50, p95, p99 using Python statistics module
- Cost tracking: per-model, per-node, and aggregate costs in USD
- Response code distribution tracking
- Git context capture (commit hash, branch, dirty status)
- Environment metadata (Python version, SyGra version)
- Thread-safe implementation with proper locking
- Toggle support via --disable_metadata flag
- Automatic JSON export with timestamp synchronization

Supported Models:
- OpenAI (GPT-4, GPT-4 Turbo, GPT-3.5 Turbo, GPT-4o, GPT-4o-mini)
- Azure OpenAI
- Anthropic Claude (via AWS Bedrock)
- vLLM (OpenAI-compatible endpoints)
- TGI (Text Generation Inference)

Documentation:
- Comprehensive feature documentation in docs/features/metadata_tracking.md
- Usage examples and API reference
- Architecture overview
- Token extraction implementation details

Tests:
- test_metadata_collector.py: Core collector functionality (32 tests)
- test_metadata_integration.py: Decorator integration (16 tests)
- test_metadata_end_to_end.py: End-to-end workflows (12 tests)
- test_langchain_callback.py: LangChain integration (6 tests)
- test_metadata_toggle.py: Enable/disable functionality (12 tests)
- test_metadata.py: Additional integration tests (16 tests)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,8 @@ nav:
           - Output Record Generator: concepts/processors/output_record_generator/README.md
       - Schema Validator: concepts/schema_validator/README.md
       - Structured Output: concepts/structured_output/README.md
+  - Features:
+      - Metadata Tracking: features/metadata_tracking.md
   - Tutorials:
       - Agent Simulation: tutorials/agent_simulation_tutorial.md
       - Agent Simulation with Tools: tutorials/agent_tool_simulation_tutorial.md
