--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "sygra"
 version = "1.0.0"
 description = "Graph-oriented Synthetic data generation Pipeline library"
 readme = "README.md"
-requires-python = ">=3.9,<3.12,!=3.9.7"
+requires-python = ">3.10,<3.13"
 authors = [{ name = "Bidyapati Pradhan, Surajit Dasgupta, Amit Kumar Saha, Sriram Puttagunta, Omkar Anustoop, Vipul Mittal, Gopal Sarda", email = "sygra_team@servicenow.com" }]
 maintainers = [
   { name = "SyGra Team", email = "sygra_team@servicenow.com" }
@@ -20,9 +20,8 @@ classifiers = [
   "Topic :: Software Development :: Libraries",
   "License :: OSI Approved :: Apache Software License",
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.9",
-  "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
   "Operating System :: OS Independent",
 ]
 keywords = ["llm", "fine-tuning", "data generation", "synthetic data", "nlp", "sft", "dpo", "data quality", "metadata tagging", "graph",]
@@ -68,9 +67,14 @@ ui = [
   "watchdog>=6.0,<7.0",
 ]
 
+agentlab = [
+  "agentlab>=0.4.0,<1.0",
+  "browsergym>=0.14.2,<1.0",
+]
+
 dev = [
-  "pytest>=8.4,<9.0",
-  "pytest-asyncio>=1.1,<2.0",
+  "pytest>=7.3.2,<9.0",
+  "pytest-asyncio>=0.21,<1.0",
   "build>=1.3,<2.0",
   "twine>=6.2,<7.0",
   "black>=25.1,<26.0",
@@ -107,7 +111,7 @@ homepage = "https://github.com/ServiceNow/SyGra"
 repository = "https://github.com/ServiceNow/SyGra"
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.12,!=3.9.7"
+python = ">3.10,<3.13"
 
 aiohttp = "^3.12"
 datasets = "^4.0"
@@ -146,9 +150,16 @@ streamlit-autorefresh = "^1.0"
 streamlit-flow-component = "^1.6"
 watchdog = "^6.0"
 
+[tool.poetry.group.agentlab]
+optional = true
+
+[tool.poetry.group.agentlab.dependencies]
+agentlab = "^0.4.0"
+browsergym = "^0.14.2"
+
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.4"
-pytest-asyncio = "^1.1"
+pytest = ">=7.3.2,<9.0"
+pytest-asyncio = ">=0.21,<1.0"
 build = "^1.3"
 twine = "^6.2"
 black = "^25.1"
@@ -163,7 +174,7 @@ mkdocs-include-markdown-plugin = "^7.1"
 # --- Tool configurations ---
 [tool.black]
 line-length = 100
-target-version = ["py39", "py310", "py311"]
+target-version = ["py311", "py312"]
 include = '\.pyi?$'
 exclude = '''
 /(
@@ -190,7 +201,7 @@ ensure_newline_before_comments = true
 skip_gitignore = true
 
 [tool.mypy]
-python_version = "3.9"
+python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false
@@ -209,4 +220,3 @@ exclude = [
 module = ["tests.*"]
 disallow_untyped_defs = false
 check_untyped_defs = false
-
