--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,8 @@ dependencies = [
   "soundfile>=0.13,<1.0",
   "types-pyyaml>=6.0,<7.0",
   "fasttext-wheel (>=0.9.2,<0.10.0)",
+  "litellm (>=1.79.3,<2.0.0)",
+  "boto3 (>=1.40.71,<2.0.0)",
 ]
 
 [project.optional-dependencies]
@@ -138,6 +140,8 @@ pandarallel = "^1.6"
 sentence-transformers = "^5.1"
 soundfile = "^0.13"
 types-pyyaml = "^6.0"
+litellm = "^1.79.3"
+boto3 = "^1.40.71"
 
 [tool.poetry.group.ui.dependencies]
 streamlit = { version = "^1.49", markers = "python_version != '3.9.7'" }
