Updates to test message to handle transcription models and introduction of input_type to route to transcription api

--- a/sygra/config/models.yaml
+++ b/sygra/config/models.yaml
@@ -101,6 +101,7 @@ tts_openai:
 
 transcribe:
   model: gpt-4o-transcribe
+  input_type: audio
   model_type: azure_openai
   api_version: 2025-03-01-preview
   # URL and api_key should be defined at .env file as SYGRA_TRANSCRIBE_URL and SYGRA_TRANSCRIBE_TOKEN
