--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,8 @@ dependencies = [
   "fasttext-wheel (>=0.9.2,<0.10.0)",
   "litellm (>=1.79.3,<2.0.0)",
   "boto3 (>=1.40.71,<2.0.0)",
+  "google-auth (>=2.43.0,<3.0.0)",
+  "google-cloud-aiplatform (>=1.128.0,<2.0.0)",
 ]
 
 [project.optional-dependencies]
@@ -142,6 +144,8 @@ soundfile = "^0.13"
 types-pyyaml = "^6.0"
 litellm = "^1.79.3"
 boto3 = "^1.40.71"
+google-auth = "^2.43.0"
+google-cloud-aiplatform = "^1.128.0"
 
 [tool.poetry.group.ui.dependencies]
 streamlit = { version = "^1.49", markers = "python_version != '3.9.7'" }
