--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ dependencies = [
   "types-pyyaml>=6.0,<7.0",
   "fasttext-wheel (>=0.9.2,<0.10.0)",
   "litellm (>=1.79.3,<2.0.0)",
-  "boto3 (>=1.40.71,<2.0.0)",
+  "boto3",
 ]
 
 [project.optional-dependencies]
@@ -141,7 +141,8 @@ sentence-transformers = "^5.1"
 soundfile = "^0.13"
 types-pyyaml = "^6.0"
 litellm = "^1.79.3"
-boto3 = "^1.40.71"
+boto3 = "^1.35.0"
+pysnc = "^1.2.0"
 
 [tool.poetry.group.ui.dependencies]
 streamlit = { version = "^1.49", markers = "python_version != '3.9.7'" }
