--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ dependencies = [
   "types-pyyaml>=6.0,<7.0",
   "fasttext-wheel (>=0.9.2,<0.10.0)",
   "litellm (>=1.79.3,<2.0.0)",
-  "pysnc (>=1.2.0,<2.0.0)",
+  "pysnc (>=1.1.0,<1.2.0)",
   "boto3 (>=1.40.71,<2.0.0)",
   "google-auth (>=2.43.0,<3.0.0)",
   "google-cloud-aiplatform (>=1.128.0,<2.0.0)",
@@ -144,7 +144,7 @@ sentence-transformers = "^5.1"
 soundfile = "^0.13"
 types-pyyaml = "^6.0"
 litellm = "^1.79.3"
-pysnc = "^1.2.0"
+pysnc = ">=1.1.0,<1.2.0"
 boto3 = "^1.40.71"
 google-auth = "^2.43.0"
 google-cloud-aiplatform = "^1.128.0"
