--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,17 +12,16 @@ permissions:
   pages: write
   id-token: write
 
-env:
-  POETRY_CACHE_DIR: /tmp/poetry_cache
-
 jobs:
 
   build:
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     runs-on: ubuntu-latest
+    env:
+      UV_PROJECT_ENVIRONMENT: .venv
 
     steps:
-      # ---- Cleanup runner disk ----
+      # ---- Disk Cleanup (Safe) ----
       - name: Free disk space
         run: |
           df -h
@@ -30,32 +29,51 @@ jobs:
           sudo rm -rf /usr/share/dotnet || true
           sudo rm -rf /opt/ghc || true
           sudo rm -rf /usr/local/.ghcup || true
-          sudo rm -rf "$AGENT_TOOLSDIRECTORY" || true
           sudo apt-get clean
           df -h
 
       # ---- Checkout ----
       - uses: actions/checkout@v4
 
-      # ---- Python + Poetry ----
+      # ---- Python setup ----
+      # Pin to an explicit patch version so cached venv is always valid
       - uses: actions/setup-python@v5
+        id: setup-python
         with:
-          python-version: "3.9"
+          python-version: "3.9.25"
 
-      - uses: snok/install-poetry@v1
+      # ---- Install uv ----
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+
+      # ---- Cache uv global + python installs ----
+      - name: Cache uv global cache
+        uses: actions/cache@v4
         with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          installer-parallel: true
+          path: |
+            ~/.cache/uv
+            ~/.local/share/uv
+          key: uv-cache-${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/uv.lock', '**/pyproject.toml') }}
+          restore-keys: |
+            uv-cache-${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-
 
-      # ---- Cache Poetry deps only ----
-      - uses: actions/cache@v4
+      # ---- Cache project venv ----
+      - name: Cache project .venv
+        uses: actions/cache@v4
         with:
-          path: /tmp/poetry_cache
-          key: poetry-${{ runner.os }}-3.9-${{ hashFiles('**/poetry.lock', '**/pyproject.toml') }}
+          path: .venv
+          key: uv-venv-${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/uv.lock', '**/pyproject.toml') }}
+          restore-keys: |
+            uv-venv-${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-
 
-      # ---- Env Setup ----
-      - run: make setup-dev
+      # ---- Environment Setup ----
+      # Important:
+      # make setup-dev MUST *not* delete .venv — otherwise the cache is pointless.
+      - name: Setup dev environment
+        run: make setup-dev
 
       # ---- FORMAT ----
       - name: Run formatter
@@ -77,7 +95,8 @@ jobs:
       - uses: actions/upload-pages-artifact@v3
         with:
           path: site
-  # Deploy Docs
+
+  # ---- Deploy Docs ----
   deploy_docs:
     if: github.ref == 'refs/heads/main'
     needs: build
