--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,29 +20,37 @@ jobs:
         with:
           python-version: "3.9"
 
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          installer-parallel: true
-
-      - name: Cache virtualenv
-        uses: actions/cache@v4
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-3.9-${{ hashFiles('**/poetry.lock', '**/pyproject.toml') }}
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
       - name: Install dependencies
         run: make setup-dev
+
+      - name: Install versioning deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install tomlkit
 
       - name: Set version from GitHub tag
         run: |
           # Extract tag like "v1.2.3" → "1.2.3"
           VERSION=${GITHUB_REF#refs/tags/v}
-          echo "Setting version to $VERSION"
-          # Update pyproject.toml version field
-          sed -i "s/^version = .*/version = \"$VERSION\"/" pyproject.toml
+          echo "Setting [project].version to $VERSION"
+          python - << 'PY'
+          from pathlib import Path
+          from tomlkit import parse, dumps
+          import os
+          version = os.environ.get('VERSION')
+          p = Path('pyproject.toml')
+          doc = parse(p.read_text(encoding='utf-8'))
+          # Update PEP 621 version
+          if 'project' in doc:
+            doc['project']['version'] = version
+          p.write_text(dumps(doc), encoding='utf-8')
+          PY
 
       - name: Build package
         run: make build
