[Enhancement] Audio Transcription Support (#63)
* Added VLLM, OpenAI litellm models

* Updated VLLM, OpenAI, AzureOpenAI litellm models

* Fixed imports VLLM litellm model

* Updated Model factory to set litellm backend for supported models and updated test cases

* Updated Documentation

* Added tests cases for litellm models

* Updated readme

* Support for gpt transcription apis

* add missing _generate_audio_chat_completion for openai lite_llm integration

* Remove local path info from gpt-4o-audio example

* Updates to test message to handle transcription models and introduction of input_type to route to transcription api

* fix langgraph factory tests

* fix custom litellm vllm tests

* format fixes

* lint fixes

* fix formatter issues

* Readme update for transcription API

* format fixes

* Add reference for gpt-4o-audio in audio_to_text.md

* Update sygra/core/models/custom_models.py

Co-authored-by: Sriram Puttagunta <sriram.puttagunta@servicenow.com>

* Review comments

* lint fixes

* transcription refactor based on new code

* transcription refactor based on new code

* test fixes

* format fixes

* doc update

* Fix lint issues for unused imports and unit tests

* Adding clearer logging for extracting image and audio urls

* utils refactor and test fixes

---------

Co-authored-by: sriram.puttagunta <sriram.puttagunta@servicenow.com>
Co-authored-by: Vipul Mittal <118464422+vipul-mittal@users.noreply.github.com>

--- a/sygra/config/models.yaml
+++ b/sygra/config/models.yaml
@@ -82,7 +82,6 @@ qwen3_1.7b:
 gpt-audio:
   model_type: azure_openai
   model: gpt-4o-audio-preview
-  input_type: audio  # Indicate audio input support
   # URL and auth_token should be defined at .env file as SYGRA_GPT-4O-AUDIO-PREVIEW_URL and SYGRA_GPT-4O-AUDIO-PREVIEW_TOKEN
   api_version: 2025-01-01-preview
   parameters:
@@ -99,6 +98,17 @@ tts_openai:
   parameters:
     voice: "alloy"
     response_format: "wav"
+
+transcribe:
+  model: gpt-4o-transcribe
+  input_type: audio
+  model_type: azure_openai
+  api_version: 2025-03-01-preview
+  # URL and api_key should be defined at .env file as SYGRA_TRANSCRIBE_URL and SYGRA_TRANSCRIBE_TOKEN
+  parameters:
+    language: en
+    response_format: json
+    temperature: 0
 
 # Image generation model
 gpt_image_1:
