feat: add metadata for multi-source dataset

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ dev = [
   "isort>=6.0,<7.0",
   "ruff>=0.13,<1.0",
   "mypy>=1.17,<2.0",
+  "types-requests>=2.31,<3.0",
   "mkdocs>=1.6,<2.0",
   "mkdocs-material>=9.6,<10.0",
   "mkdocs-include-markdown-plugin>=7.1,<8.0",
