--- a/tasks/examples/glaive_code_assistant/graph_config.yaml
+++ b/tasks/examples/glaive_code_assistant/graph_config.yaml
@@ -18,26 +18,26 @@ graph_config:
       node_type: llm
       prompt:
         - system: |
-            You are an assistant tasked with solving coding problems. 
+            You are an assistant tasked with solving coding problems.
             If the user provides critique, respond with a revised answer of your previous attempts. Do NOT generate any conversational text or apologize if your previous answer was incorrect. Respond only with the answer for the question.
         - user: |
             {question}
       model:
-        name: gpt-4o
+        name: gpt-4o-mini
         parameters:
           temperature: 0.1
     critique_answer:
       pre_process: tasks.examples.glaive_code_assistant.task_executor.CritiqueAnsNodePreProcessor
       node_type: llm
       prompt:
-        - system: |              
+        - system: |
             You are a teacher grading a solution to a coding problem. Generate critique and recommendations for the user's submission by using the reference solution as a guide. It is not mandatory for the user solution to match exactly with the reference solution as long as it is logical and leads to the right solution.
             If the answer, including all the steps, is correct, respond with 'NO MORE FEEDBACK'. Respond with 'NO MORE FEEDBACK' only after the user has corrected all the steps. Address the user in second person using 'you' and 'your'.
-            
+
             QUESTION: {question}
             REFERENCE SOLUTION: {answer}
       model:
-        name: gpt-4o
+        name: gpt-4o-mini
         parameters:
           temperature: 0.1
       post_process: tasks.examples.glaive_code_assistant.task_executor.CritiqueAnsNodePostProcessor
