--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,13 +37,13 @@ jobs:
       - name: Set version from GitHub tag
         run: |
           # Extract tag like "v1.2.3" → "1.2.3"
-          VERSION=${GITHUB_REF#refs/tags/v}
+          export VERSION="${GITHUB_REF#refs/tags/v}"
           echo "Setting [project].version to $VERSION"
           python - << 'PY'
           from pathlib import Path
           from tomlkit import parse, dumps
           import os
-          version = os.environ.get('VERSION')
+          version = os.environ["VERSION"]
           p = Path('pyproject.toml')
           doc = parse(p.read_text(encoding='utf-8'))
           # Update PEP 621 version
