feat: add SyGra Studio

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,12 @@ logs/*
 .env
 *.egg-info/*
 site/
-build/
 dist/
+
+# Studio frontend build artifacts
+**/node_modules/*
+**/.svelte-kit/*
+studio/frontend/build/
+
+# Studio runtime data
+studio/.executions_history.json
