feat: add graph export, collapsible minimap, auto-scroll logs, UI polish

--- a/studio/frontend/package.json
+++ b/studio/frontend/package.json
@@ -5,6 +5,8 @@
     "chart.js": "^4.4.7",
     "d3-dag": "^1.1.0",
     "fast-equals": "^5.2.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "lucide-svelte": "^0.468.0",
     "monaco-editor": "^0.52.2"
   },
