--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "sygra"
 version = "1.0.0"
 description = "Graph-oriented Synthetic data generation Pipeline library"
 readme = "README.md"
-requires-python = ">=3.9,<3.12,!=3.9.7"
+requires-python = ">=3.11,<3.14"
 authors = [{ name = "Bidyapati Pradhan, Surajit Dasgupta, Amit Kumar Saha, Sriram Puttagunta, Omkar Anustoop, Vipul Mittal, Gopal Sarda", email = "sygra_team@servicenow.com" }]
 maintainers = [
   { name = "SyGra Team", email = "sygra_team@servicenow.com" }
@@ -20,9 +20,9 @@ classifiers = [
   "Topic :: Software Development :: Libraries",
   "License :: OSI Approved :: Apache Software License",
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.9",
-  "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
   "Operating System :: OS Independent",
 ]
 keywords = ["llm", "fine-tuning", "data generation", "synthetic data", "nlp", "sft", "dpo", "data quality", "metadata tagging", "graph",]
@@ -37,7 +37,7 @@ dependencies = [
   "langchain-mistralai>=0.2,<1.0",
   "langgraph>=0.6,<1.0",
   "mistralai>=1.9,<2.0",
-  "openai>=1.107,<2.0",
+  "openai>=2.8,<3.0",
   "PyYAML>=6.0,<7.0",
   "transformers>=4.56,<4.57",
   "grandalf>=0.8,<1.0",
@@ -51,22 +51,22 @@ dependencies = [
   "langchain-openai>=0.3,<1.0",
   "ollama>=0.5,<1.0",
   "torch>=2.8,<3.0",
-  "mlxtend>=0.23,<1.0",
+  "mlxtend>=0.24,<1.0",
   "pandarallel>=1.6,<2.0",
   "sentence-transformers>=5.1,<6.0",
   "soundfile>=0.13,<1.0",
   "types-pyyaml>=6.0,<7.0",
   "fasttext-wheel>=0.9.2,<0.10.0",
-  "litellm>=1.79.3,<2.0.0",
-  "pysnc>=1.1.0,<1.2.0",
-  "boto3>=1.40.71,<2.0.0",
+  "litellm>=1.80.11,<2.0.0",
+  "pysnc>=1.2.0,<2.0.0",
+  "boto3>=1.34,<2.0.0",
   "google-auth>=2.43.0,<3.0.0",
   "google-cloud-aiplatform>=1.128.0,<2.0.0",
 ]
 
 [project.optional-dependencies]
 ui = [
-  "streamlit>=1.49,<2.0; python_version != '3.9.7'",
+  "streamlit>=1.49,<2.0",
   "streamlit-agraph>=0.0,<1.0",
   "streamlit-autorefresh>=1.0,<2.0",
   "streamlit-flow-component>=1.6,<2.0",
